# responses-proxy

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  build-desktop.bat  build-desktop.ps1  build-desktop.sh  docker-compose.yml  manager-config.example.json  model-config.example.json  model-presets.example.json  pyproject.toml  start-manager.bat  start-manager.ps1  start-manager.sh  start-proxy.bat  start-proxy.ps1  start-proxy.sh  stop-manager.bat  stop-manager.ps1  stop-manager.sh  stop-proxy.bat  stop-proxy.ps1  stop-proxy.sh
.github/workflows/: ci.yml
app/: __init__.py  auth.py  config.py  desktop_launcher.py  hosted_tools.py  main.py  manager_config.py  manager_main.py  manager_store.py  process_manager.py  protocol.py  store.py  translator.py  upstream.py
app/static/: app.js  styles.css
app/templates/: index.html
docs/: deploy.md  desktop-app.md  github.md  protocol-compatibility.md
docs/superpowers/plans/: 2026-04-29-web-manager-implementation.md
docs/superpowers/specs/: 2026-04-29-web-manager-design.md
packaging/: responses-proxy.desktop  responses-proxy.spec
scripts/: __init__.py  mock_upstream.py  resolve-python.ps1  run_manager.py  run_proxy.py  stop_manager.py  stop_proxy.py
tests/: test_desktop_launcher.py  test_launcher_config.py  test_manager_api.py  test_manager_auth.py  test_manager_store.py  test_manager_ui_assets.py  test_process_manager.py  test_proxy_scripts.py  test_responses_api.py
