[project]
name = "responses-proxy"
version = "0.1.0"
description = "Proxy OpenAI Responses API calls to chat/completions style upstream providers."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.4.0",
    "uvicorn>=0.30.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
